--- a/static/css/nutrition_facts.css
+++ b/static/css/nutrition_facts.css
@@ -1,8 +1,9 @@
 .nutrition-label {
   display: inline-block;
   position: relative;
-  width: 80px;
+  width: 90px;
   height: 120px;
+  padding: 5px 0px;
   text-align: center;
   border: 1px solid #000;
   border-radius: 100px/50px;
