--- a/static/css/nutrition_facts.css
+++ b/static/css/nutrition_facts.css
@@ -3,7 +3,8 @@
   position: relative;
   width: 90px;
   height: 120px;
-  padding: 5px 0px;
+  padding-left: 5px;
+  padding-right: 5px;
   text-align: center;
   border: 1px solid #000;
   border-radius: 100px/50px;
