Comments, Stars, Edit Meal (#20)
* add rating and comments

* add edit and other fixes

* fix codacy errors

* hotfix/non-authenticated user in meal view

* hotfix/edit updates meal, doesn't create new one

* migration deletion and ammend population script to include comments

* correct migration script bug user -> users

* fix userprofile bug

* nutrition fact fixes

* update comments and add requirements.txt

* populate with meal_categories update

* codacy fixes

* add comments to view

* fix potential bug from out of order imports

* remove unused imports

* bug fixes in view

--- a/templates/macro_mate/meal.html
+++ b/templates/macro_mate/meal.html
@@ -1,5 +1,8 @@
 {% extends 'macro_mate/base.html' %}
 {% load staticfiles %}
+{% comment %} For Star Ratings {% endcomment %}
+{% load ratings %}
+{% load filters %}
 
 {% block title_block %}
 Meals
@@ -7,10 +10,11 @@ Meals
 
 {% block header_block %}
 <div class="text-center">
-    <div>{{meal.name|title}}</div>
+    <div>{{meal.name|title}}{% if is_owner %}<a class="ml-3 btn btn-primary rounded-pill"
+            href="{% url 'macro_mate:add_meal' %}{{meal.id}}"><i class="fa fa-pencil" aria-hidden="true"></i>
+            Edit</a>{% endif %}</div>
     <small>curated by {{meal.owner|title}} </small>
 </div>
-
 {% endblock %}
 
 {% block body_block %}
@@ -19,26 +23,29 @@ Meals
 
 {% comment %} Container adds additional padding {% endcomment %}
 <div class="container">
-    <div class=" mb-4">
+    <div class="row align-items-center">
+        <div class="col-md-auto order-1 order-md-2 mb-4">
+            {% ratings meal %}
+        </div>
+        <div class="col-md-8 order-2 order-md-1 mr-auto">
+            <div class=" mb-4">
+                <h2 class="h4 d-md-inline mr-4">Categories:</h2>
 
-        <h2 class="h4 d-md-inline mr-4">Categories:</h2>
+                {% for cat in meal.categories.all %}
+                <span class="mr-1 badge badge-success">{{ cat }}</span>
+                {% endfor %}
+            </div>
+            <div class="mb-4">
+                <h2 class="h4 d-md-inline mr-4">Tags:</h2>
 
-        {% for cat in meal.categories.all %}
-        <span class="mr-1 badge badge-success">{{ cat }}</span>
-        {% endfor %}
-
+                {% for tag in meal.tags.all %}
+                <span class="mr-1 badge badge-info">{{ tag }}</span>
+                {% endfor %}
+            </div>
+        </div>
     </div>
 
-    <div class="mb-4">
-        <h2 class="h4 d-md-inline mr-4">Tags:</h2>
-
-        {% for tag in meal.tags.all %}
-        <span class="mr-1 badge badge-info">{{ tag }}</span>
-        {% endfor %}
-    </div>
-
-
-    <div class="row">
+    <div class="row border-top pt-4">
         <div class="col-sm col-md-6 mb-4">
             {% comment %} Getting the image from the meal - if no image displays a default {% endcomment %}
             <img class="w-100"
@@ -75,13 +82,36 @@ Meals
                     {% endif %}
                 </div>
             </div>
-
             {% endif %}
         </div>
+    </div>
 
+    <div class="border-top pt-4">
+        <h2 class="mb-4">{{comments|length}} Comments</h2>
+        {% for comment in comments %}
+        <div>
+            <h3 class="h5">{{comment.owner|title}} <span class="text-muted font-weight-normal">
+                    - {{ comment.created_on }}
+                </span></h3>
+            {{ comment.body | linebreaks }}
+        </div>
+        {% endfor %}
 
+        {% comment %} If user is logged in, show comment form {% endcomment %}
+        {% if comment_form %}
 
+        <h3 class="mt-4 card-title">Leave a comment</h3>
+        <form method="post">
+            {% csrf_token %}
+            {{comment_form.error}}
+            <div class="w-100">
+                {{comment_form.body|addcss:'form-control mb-4'}}
+            </div>
 
+            <button type="submit" class="btn btn-primary  btn-lg">Submit</button>
+        </form>
+
+        {% endif %}
     </div>
 </div>
 
